--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="{{ .Description }}" />
     <meta property="og:locale" content="en_ZA" />
     <meta property="og:url" content="https://www.ilovemdn.org/" />
-    <meta property="og:image" content="https://www.ilovemdn.org/media/social.png" />
+    <meta property="og:image" content="https://www.ilovemdn.org/media/mdn-social.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
     <meta property="og:image:alt" content="Screenshot of ilovemdn.org homepage" />
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="{{ .Params.title }}" />
     <meta name="twitter:description" content="{{ .Description }}" />
-    <meta name="twitter:image" content="https://www.ilovemdn.org/media/social.png" />
+    <meta name="twitter:image" content="https://www.ilovemdn.org/media/mdn-social.png" />
     <meta name="twitter:image:alt" content="Screenshot of ilovemdn.org homepage" />
 
     {{ $sass := resources.Get "sass/ilovemdn.scss" }}
